# nanochat

./: .commitlintrc.json  .env  .env.example  .env.production.example  .git-commit-template.txt  .gitignore  .gitmodules  .pre-commit-config.yaml  APPROVAL_LIST.md  ARCHITECTURE.md  CHANGELOG.md  CITATION_AND_LICENSE.md  COMMIT_MESSAGE.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  CSC490_README.md  DEVELOPER_ONBOARDING.md  DOCS.md  EXPORT_IMPLEMENTATION.md  FEATURES.md  H100_FIX_README.md  H100_QUICKSTART.md  IAC_GPT_README.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  ISSUE_257_FIX.md  JOURNEY_COMPLETE.md  LICENSE  LOCAL_STATE.md  MAMBA_INTEGRATION.md  MODAL_DEPLOY.md  Makefile  NEW_FILES_TREE.md  NOTICE.md  PERFORMANCE_IMPACT.md  PROFILING.md  PROJECT_SUMMARY.md  Part_2.md  QUICKSTART_MAMBA.md  (+94 more)
.github/: SECURITY_CONFIGURATION.md
clarinet/: __init__.py  dataloader.py  dataset.py  engine.py  prepare_proof_pile.py  prepare_reasoning_data.py
cloud/: README.md
config/: cpu_optimized.py  custom_config.py
configs/: README.md  g0-d4-no_think.sh  g1-d8-no_think.sh  g8-d16-no_think.sh  g8-d20-no_think.sh  g8-d20-thinking.sh  hybrid_alternating_d20.py  hybrid_early_t_late_m_d20.py  mamba_d20.py  medium.json  rag_hybrid_d20.py  rag_mamba_d20.py  refrag_hybrid_d20.py  rtx3070_d16.py  speedrun.json  tiny.json  transformer_d20.py
contracts/: logging-standard.md
d32_setup/: modal_d32_serve.py  modal_d32_setup.py  modal_d32_upload.py
data/: safety_sft_conversations.jsonl  safety_sft_conversations_multiturn.jsonl  safety_sft_conversations_multiturn_filtered.jsonl  safety_sft_conversations_multiturn_filtered_filter_stats.json
db/: alembic.ini
dev/: 01_tokenizer_walkthrough.ipynb  02_gpt_walkthrough.ipynb  03_training_walkthrough.ipynb  04_eval_and_generation_walkthrough.ipynb  APPLE_NATIVE_ACCELERATION_BASELINE_BENCHMARK.md  APPLE_NATIVE_ACCELERATION_HANDOFF.md  APPLE_NATIVE_ACCELERATION_MLX_PROTOTYPE.md  APPLE_NATIVE_ACCELERATION_MLX_TRAINING_CHECK.md  APPLE_NATIVE_ACCELERATION_TASKLIST.md  AUTORESEARCH_LS.md  AUTORESEARCH_LS_PROGRAM.md  BACKLITE.md  LEADERBOARD.md  LEADERBOARD_SUBMISSION.md  LOG.md  README_MACOS.md  attention_residuals_local_results.md  benchmark_mlx_reference.py  benchmark_mps_scaling.py  benchmark_persistent_worker.py  benchmark_swift_vs_python.py  bigram_minimal_pr_changes.md  bigram_speedrun_results.md  config.default  config.template.json  continue_training.sh  convert_to_sharegpt.py  fast_scrape_iac.sh  followup_findings.md  gen_iac_identity.py  gen_safety_question.py  gen_syntheic_safety_data.py  gen_synthetic_data.py  generate_logo.html  message_for_Mr_Karpathy.md  mlx_compile_utils.py  mlx_compiled_training_probe.py  mlx_gpt_prototype.py  mlx_input_batches.py  mlx_training_check.py  (+17 more)
dev-aime/: README.md  preprocess.py
dev-safety/: README.md  d12_train.sh  run_d12_mac.sh  run_d12_safe_20x_mac.sh  run_d12_save_mac.sh  setup_mac_env.sh
docker/: dev.Dockerfile  inference.Dockerfile  test.Dockerfile  training.Dockerfile
docs/: 01_introduction.md  02_tokenization.md  03_architecture.md  04_training.md  05_inference.md  06_tools.md  07_evaluation.md  08_quickstart.md  09_feature_implementation_guide.md  09_feature_implementation_guide_part2.md  APPLE_NATIVE_ACCELERATION_HANDOFF.md  DEPLOYMENT.md  PLANNING.md  README.md  bench_train_step.md  chaos-runbook.md  code-structure.md  configuration.md  data-layout.md  iv_conditioning.md  m3-max-guide.md  multilingual_proposal.md  phase-1.5.1-validation-checklist.md  phase-3-data-pipeline.md  phase-5-tools-transparency.md  phase-6-hybrid-architecture.md  pre_gpu_runbook.md  results.csv  results_ntk.csv  results_pi.csv  results_rope.csv  results_yarn.csv  roadmap.md  run.sh  train_step_bench.csv  training-state-refactor.md  unified-cli.md  wandb_overall.csv
educational/: 01_introduction.md  02_mathematical_foundations.md  03_tokenization.md  README.md  (+6 more)
examples/cpp_inference/: CMakeLists.txt  QUICK_START.md  README.md  libtorch_inference.cpp  onnx_inference.cpp
rustbpe/: Cargo.toml  README.md  pyproject.toml
rustbpe/src/: lib.rs
services/auth/: Dockerfile  README.md  pyproject.toml
services/auth/src/: config.py  database.py  logging_setup.py  main.py  rate_limit.py
services/auth/src/middleware/: auth_middleware.py
services/auth/src/models/: user.py
services/auth/src/routes/: oauth.py  session.py  users.py
services/auth/src/services/: github_oauth.py  google_oauth.py  jwt_service.py  user_service.py
services/auth/src/tests/: conftest.py  test_me_endpoint.py  test_oauth_flow.py  test_rate_limit.py  test_user_upsert.py  test_validate_endpoint.py
services/inference/: Dockerfile  README.md  pyproject.toml
services/inference/src/: config.py  logging_setup.py  main.py
services/inference/src/engine/: checkpoint_manager.py  engine.py  flash_attention.py  fp8.py  gpt.py  tokenizer.py  tools.py
services/inference/src/middleware/: __init__.py  internal_auth.py
services/inference/src/services/: __init__.py  weight_manager.py  worker_pool.py
services/inference/tests/: test_main.py  test_weight_manager.py
synth-data-pipeline/: .gitignore  1_extract_qa.py  2_validate_qa.py  3_generate_conversations.py  4_judge_and_save.py  5_embed_conversations.py  6_deduplicate.py  7_select_top.py  Makefile  README.md  pyproject.toml  trial_run.py
synth-data-pipeline/src/synth_data_pipeline/: __init__.py  config.py  embedding_utils.py  models.py  sampling.py  utils.py
synth-data-pipeline/src/synth_data_pipeline/agents/: __init__.py  base.py  conversation_generator.py  conversation_judge.py  qa_extractor.py  qa_validator.py
synth-data-pipeline/src/synth_data_pipeline/agents/prompts/: conversation_generator.txt  conversation_judge.txt  qa_extractor.txt  qa_validator.txt
synth-data-pipeline/src/synth_data_pipeline/prompts/personas/: cs_agent.txt  developer.txt  executive.txt  finance.txt  operations.txt  product_manager.txt
synth-data-pipeline/src/synth_data_pipeline/prompts/system_prompts/: concise.txt  detailed.txt  helpful.txt  sales.txt  technical.txt
(+793 files in other folders)
