[build-system]
# Without an explicit build-system, pip falls back to setuptools and tries
# auto-discovery, which fails because the repo has multiple top-level dirs
# (`nanochat`, `clarinet`, `runs`, `dev`, `tests`, ...). uv users don't hit
# this because uv handles editable installs without invoking the build
# backend. With this section, `pip install -e .` uses hatchling, which honors
# the explicit packages list in [tool.hatch.build.targets.wheel] below.
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clarinet"
version = "0.1.0"
description = "Instrumental-variable conditioned LLM, research fork of nanochat by Vemund Rundberget"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.0.0",
    "fastapi>=0.117.1",
    "kernels>=0.11.7",
    "psutil>=7.1.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "tokenizers>=0.22.0",
    "torch==2.9.1",
    "uvicorn>=0.36.0",
    "wandb>=0.21.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "pytest>=8.0.0",
    "python-dotenv>=1.2.1",
    "transformers>=4.57.3",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# target torch to cuda 12.8 or CPU
[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "gpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[project.optional-dependencies]
cpu = [
    "setuptools>=65.0.0",
    "torch==2.9.1",
]
gpu = [
    "torch==2.9.1",
]

[tool.uv]
default-groups = []
conflicts = [
    [
        { extra = "cpu" },
        { extra = "gpu" },
    ],
]

# Explicit package list: project name no longer matches a single top-level dir,
# so we tell the build backend which directories to ship.
[tool.hatch.build.targets.wheel]
packages = ["nanochat", "clarinet"]
